# epanet-rtx

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  _aggregator_time_series_8h_source.html  _base_stats_time_series_8h_source.html  _buffer_point_record_8h_source.html  _clock_8h_source.html  _config_factory_8h_source.html  _config_project_8h_source.html  _constant_time_series_8h_source.html  _correlator_time_series_8h_source.html  _csv_point_record_8h_source.html  _curve_function_8h_source.html  _db_point_record_8h_source.html  _deque_point_record_8h_source.html  _dma_8h_source.html  _element_8h_source.html  _epanet_model_8h_source.html  _epanet_msx_model_8h_source.html  _epanet_synthetic_model_8h_source.html  _failover_time_series_8h_source.html  _first_derivative_8h_source.html  _forecast_time_series_8h_source.html  _gain_time_series_8h_source.html  _influx_db_point_record_8h_source.html  _inversion_time_series_8h_source.html  _irregular_clock_8h_source.html  _junction_8h_source.html  _link_8h_source.html  _map_point_record_8h_source.html  _model_8h_source.html  _model_performance_8h_source.html  _modular_time_series_8h_source.html  _moving_average_8h_source.html  _multiplier_time_series_8h_source.html  _mysql_point_record_8h_source.html  _node_8h_source.html  _odbc_direct_point_record_8h_source.html  (+531 more)
.github/workflows/: cmake.yml  dockerfile.yml
doc/: Doxyfile  mainpage.md  pages.dox
doc/markdown/: conventions.md  footer.html  mainpage.md
epanetrtx.xcodeproj/: project.pbxproj
epanetrtx.xcodeproj/xcshareddata/xcschemes/: epanetrtx.xcscheme
examples/: readConfig.cpp  workshop_template.cpp
examples/Duplicator/: DuperDaemon.cpp  TimeSeriesDuplicator.cpp  TimeSeriesDuplicator.h  rtxduplicator-init.sh
examples/Duplicator/defaults/: rtxduplicator
examples/FLUX-service/: FluxService (samBook2's conflicted copy 2016-03-26).cpp  FluxService.cpp  FluxService.hpp  main (samBook2's conflicted copy 2016-03-26).cpp  main.cpp
examples/LINK-service/: LinkJsonSerialization.cpp  LinkJsonSerialization.hpp  LinkService.cpp  LinkService.hpp  main.cpp
examples/LINK-service/cmake/: CMakeLists.txt
examples/LINK-service/frontend/: core.js  electron_main.js  index.html  package.json  server.js
examples/LINK-service/frontend/public/: core.js  index.html
examples/LINK-service/frontend/public/grafana/: grafana_contents.json  (+1 more)
examples/LINK/frontend/: README.md  package-lock.json  package.json  server.js
examples/LINK/frontend-depr/: README.md  package.json  server.js
examples/LINK/frontend-depr/public/: login-page.html
examples/LINK/frontend/app/: App.html  client.js  server.js  template.html
examples/LINK/frontend/components/: Nav.html  OptionListView.html  login.ejs
examples/LINK/frontend/model/: authentication.js  commonSetup.js  configuration.js  linkProxy.js  log.js  navigationData.js  no_authentication.js  spawnMonitor.js
examples/LINK/frontend/public/: core.js  index.html  login-page.html
examples/LINK/frontend/routes/: 4xx.html  5xx.html  about.html  config.html  destination.html  index.html  logs.html  options.html  run.html  source.html
examples/LINK/frontend/webpack/: client.config.js  server.config.js
examples/LINK/sapper-frontend/: package-lock.json
examples/LINK/sapper-frontend/app/: server.js
examples/LINK/sapper-frontend/assets/: manifest.json
examples/LINK/sapper-frontend/routes/: options.html  source.html
examples/LINK/service/: AutoRunner.cpp  AutoRunner.hpp  CMakeLists.txt  LinkJsonSerialization.cpp  LinkJsonSerialization.hpp  LinkService.cpp  LinkService.hpp  main.cpp
examples/LINK/service/cmake/: CMakeLists.txt
examples/LINK/ui/: package-lock.json  package.json  server.js
examples/LINK/ui/model/: configuration.js  linkProxy.js  navigationData.js  typeData.js
examples/LINK/ui/routes/: destination.html  logs.html  options.html  run.html  source.html
examples/LINK/ui/templates/: main.js
examples/conceptual/: CMakeLists.txt  timeseries_demo.cpp
examples/data_access_profiling/: data_access.cpp
examples/rtxNetSim/: main.cpp  rt_simulator.cpp
examples/validator/: sample.cfg  sampletown.inp  sampletown_realtime.cfg  sampletown_synthetic.cfg  validator.cpp
project/: ConfigProject.cpp  ConfigProject.h  ProjectFile.cpp  ProjectFile.h  SqliteProjectFile.cpp  SqliteProjectFile.h
search/: all_61.js  all_63.js  all_64.js  all_65.js  all_66.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_69.js  classes_6a.js  classes_6c.js  classes_6e.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  classes_75.js  classes_76.js  classes_7a.js  enums_71.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  functions_69.js  functions_6c.js  (+15 more)
src/: AggregatorTimeSeries.cpp  AggregatorTimeSeries.h  AutoRunner.cpp  BaseStatsTimeSeries.cpp  BaseStatsTimeSeries.h  BufferPointRecord.cpp  BufferPointRecord.h  Clock.cpp  Clock.h  Components.hpp  ConcreteDbRecords.cpp  ConcreteDbRecords.h  ConfigFactory.cpp  ConfigFactory.h  ConfigProject.cpp  ConfigProject.h  ConstantSeries.cpp  ConstantSeries.h  ConstantTimeSeries.cpp  ConstantTimeSeries.h  CorrelatorTimeSeries.cpp  CorrelatorTimeSeries.h  CsvPointRecord.cpp  CsvPointRecord.h  Curve.cpp  Curve.h  CurveFunction.cpp  CurveFunction.h  DbAdapter.h  DbPointRecord.cpp  DbPointRecord.h  DequePointRecord.cpp  DequePointRecord.h  Dma.cpp  Dma.h  Element.cpp  Element.h  EpanetModel.cpp  EpanetModel.h  EpanetModelExporter.cpp  (+186 more)
src/epanet/include/: epanet2.h
src/epanet/src/: epanet.c  funcs.h  hash.c  hash.h  hydraul.c  inpfile.c  input1.c  input2.c  input3.c  mempool.c  output.c  quality.c  report.c  rules.c  smatrix.c  text.h  toolkit.h  types.h  vars.h
test/: CMakeLists.txt  MyClientTest.cpp  MyClientTest.hpp  TestClient.h  TestComponent.hpp  TestController.h  test_element.cpp  test_filters.cpp  test_influx.cpp  test_main.cpp  test_main.h  test_record.cpp  test_units.cpp
(+44 files in other folders)
